<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	
	<groupId>com.autotest.web</groupId>
	<artifactId>WebFramework</artifactId>
	<version>1.1.0</version>
	<packaging>jar</packaging>
	
	<name>WebFramework</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<selenium.version>2.47.1</selenium.version>
		<skipTests>false</skipTests>
		<file.encoding>UTF-8</file.encoding>
		<surefire.plugin.revision>2.18.1</surefire.plugin.revision>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>3.5</version>
		</dependency>
		<dependency>
			<groupId>com.codeborne</groupId>
			<artifactId>phantomjsdriver</artifactId>
			<version>1.2.1</version>
		</dependency>
		<dependency>
			<groupId>com.google.inject</groupId>
			<artifactId>guice</artifactId>
			<version>3.0</version>
		</dependency>
		<dependency>
			<groupId>net.sourceforge.jexcelapi</groupId>
			<artifactId>jxl</artifactId>
			<version>2.6.12</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>velocity</groupId>
			<artifactId>velocity-dep</artifactId>
			<version>1.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-plugin-api</artifactId>
			<version>3.3.3</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.7</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-server</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-java</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-remote-driver</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium</groupId>
			<artifactId>selenium-api</artifactId>
			<version>${selenium.version}</version>
		</dependency>
		<dependency>
			<groupId>org.seleniumhq.selenium.fluent</groupId>
			<artifactId>fluent-selenium</artifactId>
			<version>1.16</version>
		</dependency>
		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.30</version>
		</dependency>
		<dependency>
			<groupId>org.testng</groupId>
			<artifactId>testng</artifactId>
			<version>6.8.8</version>
		</dependency>
		<dependency>
			<groupId>commons-configuration</groupId>
			<artifactId>commons-configuration</artifactId>
			<version>1.9</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>3.12</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>3.12</version>
		</dependency>
		<dependency>
			<groupId>com.thoughtworks.qdox</groupId>
			<artifactId>qdox</artifactId>
			<version>1.12.1</version>
		</dependency>
		<dependency>
			<groupId>commons-dbutils</groupId>
			<artifactId>commons-dbutils</artifactId>
			<version>1.6</version>
		</dependency>
		<dependency>
			<groupId>ch.ethz.ganymed</groupId>
			<artifactId>ganymed-ssh2</artifactId>
			<version>262</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-math3</artifactId>
			<version>3.5</version>
		</dependency>
		

		<!-- <dependency> <groupId>com.juanpi</groupId> <artifactId>selenium-java</artifactId> 
			<version>2.47.1</version> </dependency> <dependency> <groupId>com.juanpi</groupId> 
			<artifactId>selenium-server</artifactId> <version>2.47.1</version> </dependency> 
			<dependency> <groupId>com.juanpi</groupId> <artifactId>guice</artifactId> 
			<version>3.0</version> </dependency> <dependency> <groupId>com.juanpi</groupId> 
			<artifactId>reportng</artifactId> <version>1.1.4</version> </dependency> 
			<dependency> <groupId>com.juanpi</groupId> <artifactId>dbunit</artifactId> 
			<version>2.4.9</version> </dependency> -->

	</dependencies>

	<build>
		<sourceDirectory>${basedir}/src/main/java</sourceDirectory>
		<outputDirectory>${basedir}/target/classes</outputDirectory>
		<testSourceDirectory>${basedir}/src/test/java</testSourceDirectory>
		<testOutputDirectory>${basedir}/target/test-classes</testOutputDirectory>
		<testResources>
			<testResource>
				<directory>${basedir}/src/test/resources</directory>
				<filtering>false</filtering>
				<includes>
					<include>**/*.exe</include>
					<include>**/*.properties</include>
					<include>**/*.csv</include>
					<include>**/*.jpg</include>
					<include>**/*.xlsx</include>
				</includes>
				<excludes>
					<exclude>**/*.ppt</exclude>
					<exclude>**/*.pdf</exclude>
				</excludes>
			</testResource>
		</testResources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.3</version>
				<configuration>
					<source>1.8</source>
					<target>1.8</target>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-resources-plugin</artifactId>
				<version>2.6</version>
				<configuration>
					<encoding>${project.build.sourceEncoding}</encoding>
				</configuration>
			</plugin>
			<plugin>
    			<artifactId>maven-antrun-plugin</artifactId>
   				<version>1.7</version>
    			<executions>
    				<execution>
      					<phase>test</phase>
      					<goals>
      						<goal>run</goal>
      					</goals>
      					<configuration>
      						<target>
    							<mkdir dir="${project.build.directory}/test-screenshots"/> 							
    							<mkdir dir="${project.build.directory}/test-log"/> 							
       							<zip destfile="${project.build.directory}/automation-report.zip">
       								<zipfileset dir="${project.build.directory}/test-report" includes="**/*.*" prefix="report"/>
       								<zipfileset dir="${project.build.directory}/test-log" includes="**/*.*" prefix="report/testlog"/>
       								<zipfileset dir="${project.build.directory}/test-screenshots" includes="**/*.*" prefix="report/screenshots"/>
        						</zip>
     						</target>
    					</configuration>
    				</execution>
  				</executions>
   			</plugin>
		</plugins>
	</build>	

	<repositories>
		<repository>
			<id>internal</id>
			<name>Internal Nexus</name>
			<url>http://192.168.16.50:8081/nexus/content/repositories/public</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>internal</id>
			<name>Internal Nexus</name>
			<url>http://192.168.16.50:8081/nexus/content/repositories/public</url>
			<releases>
				<enabled>true</enabled>
			</releases>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>
	
	<profiles>
		<profile>
			<id>oa</id>
			<activation>
				<activeByDefault>false</activeByDefault>
				<jdk>[1.7, 1.8]</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>${surefire.plugin.revision}</version>
						<configuration>
						    <skipTests>${skipTests}</skipTests>
						    <systemPropertyVariables>
						    </systemPropertyVariables>
							<argLine>-Dfile.encoding=${file.encoding}</argLine>
							<argLine>-Xms1024m -Xmx2048m -XX:PermSize=256m -XX:MaxPermSize=512m</argLine>
							<forkCount>0</forkCount>
							<reuseForks>false</reuseForks>
							<testFailureIgnore>true</testFailureIgnore>
							<includes>
            					<include>**/*Test.java</include>
          					</includes>
							<suiteXmlFiles>
								<suiteXmlFile>testng_xmls/oa.xml</suiteXmlFile>
							</suiteXmlFiles>
							<reportsDirectory>${project.build.directory}/test-report</reportsDirectory>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>mi</id>
			<activation>
				<activeByDefault>false</activeByDefault>
				<jdk>[1.7, 1.8]</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>${surefire.plugin.revision}</version>
						<configuration>
						    <skipTests>${skipTests}</skipTests>
						    <systemPropertyVariables>
						    </systemPropertyVariables>
							<argLine>-Dfile.encoding=${file.encoding}</argLine>
							<argLine>-Xms1024m -Xmx2048m -XX:PermSize=256m -XX:MaxPermSize=512m</argLine>
							<forkCount>0</forkCount>
							<reuseForks>false</reuseForks>
							<testFailureIgnore>true</testFailureIgnore>
							<includes>
            					<include>**/*Test.java</include>
          					</includes>
							<suiteXmlFiles>
								<suiteXmlFile>testng_xmls/xiaomi.xml</suiteXmlFile>
							</suiteXmlFiles>
							<reportsDirectory>${project.build.directory}/test-report</reportsDirectory>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>jd</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>${surefire.plugin.revision}</version>
						<configuration>
						    <skipTests>${skipTests}</skipTests>
						    <systemPropertyVariables>
						    	<testEnv>${debugEnv}</testEnv>
						    </systemPropertyVariables>
							<argLine>-Dfile.encoding=${file.encoding}</argLine>
							<argLine>-Xms1024m -Xmx2048m -XX:PermSize=256m -XX:MaxPermSize=512m</argLine>
							<forkCount>0</forkCount>
							<reuseForks>false</reuseForks>
							<testFailureIgnore>true</testFailureIgnore>
							<includes>
            					<include>**/*Test.java</include>
          					</includes>
							<suiteXmlFiles>
								<suiteXmlFile>testng_xmls/jd.xml</suiteXmlFile>
							</suiteXmlFiles>
							<reportsDirectory>${project.build.directory}/test-report</reportsDirectory>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
